(library
 (public_name hyper.http)
 (name hyper__http)
 (libraries
  dream-httpaf
  dream-pure
  h2
  h2-lwt-unix
  httpaf
  httpaf-lwt-unix
  websocketaf
  websocketaf-lwt-unix
  mirage-crypto-rng
  mirage-crypto-rng.lwt
  uri
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx)))
